# sqrap-dx12

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  todo.md  vcpkg-configuration.json  vcpkg.json
inc/: AS.hpp  Accelerationstructure.hpp  Alias.hpp  Application.hpp  Buffer.hpp  Camera.hpp  Command.hpp  Commandlist.hpp  Commandmanager.hpp  Commandqueue.hpp  Descriptorheap.hpp  Descriptormanager.hpp  Descriptortable.hpp  Device.hpp  Dxc.hpp  Fence.hpp  Gui.hpp  Indirect.hpp  Mesh.hpp  Object.hpp  Pipeline.hpp  Raytracing.hpp  Resource.hpp  Rootsignature.hpp  Shader.hpp  Swapchain.hpp  Workgraph.hpp  common.hpp  pch.hpp  sqrap.hpp
ports/directx-dxc/: directx-dxc-config.cmake.in  portfile.cmake  usage  vcpkg.json
ports/directx-headers/: portfile.cmake  usage  vcpkg.json
ports/directx12-agility/: directx12-config.cmake.in  portfile.cmake  usage  vcpkg.json
sample/meshshader/: CMakeLists.txt  MeshShader.hlsl  MeshShaderApp.cpp  MeshShaderApp.hpp  MeshShaderScene.cpp  MeshShaderScene.hpp  main.cpp
sample/raster/: CMakeLists.txt  Lambert.hlsl  SampleApplication.cpp  SampleApplication.hpp  SampleScene.cpp  SampleScene.hpp  main.cpp
sample/raytracing/: CMakeLists.txt  SampleApplication.cpp  SampleApplication.hpp  SampleScene.cpp  SampleScene.hpp  main.cpp  raytracing.hlsl
sample/shader/: Lambert.hlsl
sample/src/: CMakeLists.txt  SampleApplication.hpp  SampleScene.cpp  SampleScene.hpp  main.cpp
sample/workgraph/: CMakeLists.txt  WorkGraph.hlsl  WorkGraphApp.cpp  WorkGraphApp.hpp  WorkGraphScene.cpp  WorkGraphScene.hpp  main.cpp
src/: AS.cpp  Accelerationstructure.cpp  Application.cpp  Buffer.cpp  Camera.cpp  Command.cpp  Commandlist.cpp  Commandmanager.cpp  Commandqueue.cpp  Descriptorheap.cpp  Descriptormanager.cpp  Descriptortable.cpp  Device.cpp  Dxc.cpp  Fence.cpp  Gui.cpp  Indirect.cpp  Mesh.cpp  Object.cpp  Pipeline.cpp  Raytracing.cpp  Resource.cpp  Rootsignature.cpp  Shader.cpp  Swapchain.cpp  Workgraph.cpp  common.cpp
template/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
test/src/: CMakeLists.txt  SampleScene.cpp  SampleScene.hpp  TestApplication.cpp  TestApplication.hpp  main.cpp
